--- a/charts/sample-activiti-cloud-app/Chart.yaml
+++ b/charts/sample-activiti-cloud-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: activiti cloud application
-name: REPLACE_ME_APP_NAME
+name: sample-activiti-cloud-app
 version: 0.0.1-SNAPSHOT
